added github link and date

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <script src="script.js"></script>
     <center>
+        <p>
+            Published on 26-11-21
+                        by <a href="https://satvik.ninja" target="_blank">Satvik</a>
+        </p>
+        <div class = "link">
+            <a href="https://github.com/satvikDesktop/Age" target="_blank">GitHub</a>
+           </div>
     <h1>How old am I ? </h1>
-    <h3>Calculate your age in minutes ,hours and days</h3>
+    <h3>Calculate your age in minutes hours and days</h3>
     <br>
     <input type="text" id="txtInput" placeholder="Enter your age in years"><br>
     <button type="button" onclick="calc()">Calculate</button>
