--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <script src="script.js"></script>
     <center>
     <h1>How old am I ? </h1>
-    <input type="text" id="txtInput" placeholder="Enter your age in years"><br>
-    <button type="button" onclick="calc()">Calculate</button>
-    <button type="button" onclick="reload()">Clear results</button>
+    <button type="button" onclick="calc()">Show</button>
 </center>
 </body>
 </html>
