--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="script.js"></script>
     <center>
     <h1>How old am I ? </h1>
-    <button type="button" onclick="calc()">Show</button>
+    <button type="button" onclick="calc()">Calculate</button>
 </center>
 </body>
 </html>
